--- a/psychicgame.html
+++ b/psychicgame.html
@@ -19,7 +19,7 @@
 
         <h1>The Psychic Game</h1>
   
-                <h2>Guess what letter I'm thinking of</h2>
+                <p>Guess what letter I'm thinking of</p>
                 <span>Wins:</span>
                 <span id="wins">0</span>
             <br /><br />
